--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -27,6 +27,17 @@ http {
             return 200 '{"code":"1", "status": "ok"}';
         }
 
+        location = /teste {
+            default_type application/json;
+            return 200 '{"code":"1", "status": "teste"}';         
+        }        
+
+
+        location /teste/bbb {
+            default_type application/json;
+            return 200 '{"code":"1", "status": "bbb"}';
+        }    
+
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
