--- a/many_nginx/etc/nginx/app/app_c.conf
+++ b/many_nginx/etc/nginx/app/app_c.conf
@@ -4,7 +4,7 @@ upstream up_app_c {
     keepalive 16;
 }
 
-proxy_cache_path /dev/shm/app_c_cache levels=1:2 use_temp_path=on keys_zone=nearby_places_cache:1m inactive=1m max_size=1m;
+proxy_cache_path /dev/shm/app_c_cache levels=1:2 use_temp_path=on keys_zone=app_c_cache:1m inactive=1m max_size=1m;
 
 log_format  log_cache  '$remote_addr - cache_status:"$upstream_cache_status" - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
@@ -17,7 +17,7 @@ server {
     
     location / {
         proxy_cache_key $scheme$host$request_uri;
-        proxy_cache nearby_places_cache;
+        proxy_cache app_c_cache;
         proxy_cache_valid 200 301 302 304 5m;
         proxy_pass http://up_app_c;
         proxy_redirect off;
