--- a/cors/etc/nginx/app_a/app.conf
+++ b/cors/etc/nginx/app_a/app.conf
@@ -5,7 +5,7 @@ server {
     location / {
         default_type application/json;
 
-        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Origin' 'http://app.example.com';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
